# docswarm

./: .env.example  .gitignore  AGENT.md  DESIGN.md  Makefile  README.md  config.yaml  docker-compose.fast.yml  docker-compose.local.yml  docker-compose.remote.yml  docker-compose.yml  extract.py  generate_all.py  pyproject.toml  requirements.txt  reset_swarm.py  sync_wiki.py
.github/workflows/: ci.yml
docker/: agent.Dockerfile  judge.Dockerfile  stub-ollama.Dockerfile  stub_ollama.py
docs/: swarm-flow.md
docswarm/: __init__.py  config.py  logger.py
docswarm/agents/: __init__.py  personas.py  swarm.py
docswarm/extraction/: __init__.py  chunker.py  pdf_extractor.py  pipeline.py
docswarm/storage/: __init__.py  database.py
judge/: alignment.py  broad.py  config.py  judge.py  leakage_filter.py  llm_client.py  marking.py  path_resolver.py  similarity.py
judge/tests/: test_leakage_filter.py  test_marking.py  test_path_resolver.py
module/: pyproject.toml
module/pdf_to_json/: __init__.py  assemble.py  cache.py  config.py  ollama_client.py  pipeline.py  schema.py
module/tests/: test_assemble.py
orchestration/: launch.py  provision.py  run.sh  setup.sh  teardown.sh
schema/: example_output.json  schema.json
scripts/: export_schema.py  report.py  run_local_fast.py  run_test.py  run_validation.py  seed_synthetic.py
tests/: conftest.py  test_chunker.py  test_config.py  test_database.py  test_db_thread_safety.py  test_db_tools.py  test_entity_tools.py  test_file_tools.py  test_pdf_extractor.py  test_swarm.py  test_think_disabled.py  test_wiki_client.py
(+6 files in other folders)
